# aot_gzip

./: Cargo.toml  README.md  flake.nix
src/: gzip.rs  main.rs
