[package]
name = "aot_gzip"
version = "0.1.2"
edition = "2021"
authors = ["urlordjames <32751441+urlordjames@users.noreply.github.com>"]
license = "GPL-3.0+"

[dependencies.clap]
version = "4.3"
features = [ "derive" ]

[dependencies.tokio]
version = "1.29"
features = [ "rt-multi-thread", "macros", "fs" ]

[dependencies.tokio-util]
version = "0.7"
features = [ "codec", "io" ]

[dependencies.futures-util]
version = "0.3"
default-features = false
features = [ "sink" ]

[dependencies]
async-recursion = "1.0"
flate2 = "1.0"
bytes = "1.4"

[profile.release]
lto = "fat"